--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,17 +4,38 @@
     <head>
         <title>TechShope</title>
         <meta charset="UTF-8">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <div>
-            <h1 style="text-align: center;background-color: black; color: white">Home</h1>
-            <h2>La Pagina principal</h2>
-            <hr/>
-        </div>
-        <div style="text-align: center">
+        <header>
+            <h1>TechShop</h1>
+            <nav>
+                <a href="ejemplo5.html">&triangleleft;</a>
+                <a href="index.html">Home</a>
+                <a href="ejemplo2.html">&triangleright;</a>
+            </nav>
+        </header>
+        <aside>
+            <h2>Home</h2>
+            <h3>La pagina principal</h3>
+        </aside>
+        <section>
+            <article>
             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit nisi fusce accumsan, dis praesent scelerisque dignissim ac venenatis erat curae. Bibendum sociosqu nostra cras luctus suscipit velit imperdiet taciti iaculis sem eget, conubia diam a vestibulum rhoncus feugiat dignissim primis curae convallis, volutpat placerat neque eu cursus euismod blandit class dapibus faucibus. Neque mi aenean ridiculus mauris sapien torquent facilisis non eros taciti habitasse, curabitur phasellus venenatis euismod senectus primis metus vehicula bibendum. Mollis varius vulputate tincidunt enim cursus lobortis ornare natoque luctus taciti per nascetur dictum, class sociis lacus sagittis tristique primis curabitur aenean mi nisi feugiat.<p/>
+            </article>
+            <article>
             <p>Sociis phasellus ante cursus porta magna penatibus montes, proin ridiculus accumsan sodales inceptos cum volutpat, luctus commodo viverra massa mi sapien aliquet, cras vel quis bibendum curae curabitur. Platea eleifend tortor massa tristique nibh malesuada et, eget lobortis a tempor lacinia dignissim sociis velit, ultricies est at taciti feugiat fames. Suspendisse posuere rhoncus tortor aptent dignissim a curabitur penatibus in hac, mi tincidunt lacus parturient sociosqu vehicula at donec vivamus.<p/>
+            <figure>
+            <img src="img/marmota.jpg" alt="" width="200"/>
+            <figcaption>La marmota</figcaption>
+            </figure>
+            </article>
+            <article>
             <p>Lectus habitasse vulputate enim libero aliquet dui netus laoreet consequat sem purus, commodo diam leo eu conubia vestibulum suscipit blandit odio bibendum curabitur, vivamus egestas viverra vehicula risus rhoncus aliquam ante taciti mattis. Ultrices pharetra magnis lectus condimentum congue eros taciti scelerisque, class commodo parturient eu convallis aliquet habitasse ut, venenatis elementum mauris magna cubilia mollis placerat. Tellus mi malesuada magnis a torquent vulputate nec, cursus molestie facilisi vehicula platea condimentum dis, sed quisque ante lectus parturient bibendum. Neque metus habitasse aptent maecenas turpis eleifend feugiat, ultrices commodo rutrum et lobortis nibh, augue vel porta rhoncus interdum quam.<p/>
-        </div>
+            </article>
+        </section>
+        <footer>
+            <p>Derechos Reservados &COPY; 2023</p>
+        </footer>
     </body>
 </html>
