--- a/src/main/resources/static/ejemplo3.html
+++ b/src/main/resources/static/ejemplo3.html
@@ -11,7 +11,7 @@
             <h1>TechShop</h1>
             <nav>
                 <a href="ejemplo2.html">&triangleleft;</a>
-                <a href="index.html">Home</a>
+                <a href="index_11111.html">Home</a>
                 <a href="ejemplo4.html">&triangleright;</a>
             </nav>
         </header>
